# http-server

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
examples/config/: basic.js
examples/db/pg/: user.sql
examples/db/sqlite/: post.sql  user.sql
examples/http/login/: package-lock.json  package.json  server.js
examples/nginx/: router.conf
examples/www/public/: app.js  site.css
examples/www/public/components/: base.js  post.xhtml  user-sidebar.xhtml  user.xhtml
examples/www/views/: add-user.ejs  app.ejs  component.ejs  config.ejs  footer.ejs  head-app.ejs  head.ejs  header.ejs  index.ejs  login-failed.ejs  post-new.ejs  post.ejs  posts.ejs  react-demo.ejs  user.ejs  users.ejs
lib/: CMakeLists.txt
lib/cmark/: CMakeLists.txt
lib/cmark/src/: CMakeLists.txt
lib/duktape/: CMakeLists.txt
lib/duktape/src/: CMakeLists.txt
lib/soci/: CMakeLists.txt
lib/soci/include/soci/: connection-pool.h  rowset.h  soci-backend.h  soci.h
lib/soci/include/soci/postgresql/: soci-postgresql.h
lib/soci/include/soci/sqlite3/: soci-sqlite3.h
lib/soci/src/backends/: CMakeLists.txt
lib/soci/src/backends/postgresql/: factory.cpp  session.cpp  statement.cpp
lib/soci/src/backends/sqlite3/: factory.cpp  statement.cpp  vector-into-type.cpp
lib/soci/src/core/: backend-loader.cpp  common.cpp  connection-pool.cpp  soci-simple.cpp  statement.cpp
lib/tinyjs/: CMakeLists.txt  String.cpp  String.h  TinyJS.cpp  TinyJS.h  TinyJS_Functions.cpp  dregex.cpp  dregex.h
src/: CMakeLists.txt  http_server.cxx  http_server_fast.cpp  utils.cxx  utils.h
src/router/: CMakeLists.txt  cache.cxx  cache.h  config.cxx  config.h  context.cxx  context.h  db.cxx  db.h  ejs.cxx  ejs.h  functions.cxx  functions.h  router.cxx  router.h  utils.cxx  utils.h
src/router/executor/: CMakeLists.txt  base.cxx  base.h  cache.cxx  cache.h  db.cxx  db.h  ejs.cxx  ejs.h  html.cxx  html.h  json.cxx  json.h  soci_fwd.h  utils.cxx  utils.h
src/server/: cache.h  request.h  session.h  timer.h
